--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="moi">
-        <h1>AKAN NAME GENERATOR</h1>
+        <h1>AKAN NAME RESOLVER</h1>
         <p>
             Akan names are derived from Ghanian culture. Frequently in Ghana , children are given their first name as a day name which corresponds to the day in the week they were born. <br/><br/>
             This is an akan name generator with which you can get to know your akan name by inputting your year, month and day of birth and also gender.<br/><br/>
