--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <div class="moi">
         <h1>AKAN NAME RESOLVER</h1>
         <p>
-            Akan names are derived from Ghanian culture. Frequently in Ghana , children are given their first name as a day name which corresponds to the day in the week they were born. <br/><br/>
-            This is an akan name generator with which you can get to know your akan name by inputting your year, month and day of birth and also gender.<br/><br/>
-            Fill in the required information below to find out what your akan name is.
+            In Ghana, a child's First name is dependednt on the day of the week that he/she was born. This web applicaton will help determine a person's first name depending on their birthday and gender. The user enters their date of birth and their gender and the tool will return their Akan names.<br/><br/>
+            Most Ghanaians have at least one name from this system, even if they also have an English or Christian name. Notable figures with day names include Ghana's first president Kwame Nkrumah and former United Nations Secretary-General Kofi Annan.
 
         </p>
     </div>
