removed commented out text

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <br/><br/>
             <div class="form">
                 <div>
-                    <h4>gender</h4>
+                    <h3>Gender</h3>
                     <label for="radio" class="radio-inline">
                         <input type="radio" value="male" name="gender" id="male" required />
                         Male </label><br />
