changed submit button

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                     </label>
         </form>
         <br/><br/>
-        <button type="submit" onclick="getName()" onsubmit="event.preventDefault()"
-            class="btn btn-outline-primary">submit</button>
+        <button type="button" onclick="getName()" onsubmit="event.preventDefault()"
+        class="btn btn-success" >submit</button>
     </div>
 </body>
 </html>
