added text to paragraph

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <h1>AKAN NAME RESOLVER</h1>
         <p>
             In Ghana, a child's First name is dependednt on the day of the week that he/she was born. This web applicaton will help determine a person's first name depending on their birthday and gender. The user enters their date of birth and their gender and the tool will return their Akan names.<br/><br/>
-            Most Ghanaians have at least one name from this system, even if they also have an English or Christian name. Notable figures with day names include Ghana's first president Kwame Nkrumah and former United Nations Secretary-General Kofi Annan.
+            Most Ghanaians have at least one name from this system, even if they also have an English or Christian name. Notable figures with day names include Ghana's first president Kwame Nkrumah and former United Nations Secretary-General Kofi Annan. <br/><br/>
+            These <q>day names</q> have further meanings concerning the soul and character of the person. Middle names have considerably more variety and can refer to their birth order, twin status, or an ancestor's middle name.
 
         </p>
     </div>
